Metadata fixes for the tameable animals, Updated protocol version to 1.9-pre1. Fixed SpawnObjectCodec with the new information from wiki.vg.