@@ -23,15 +23,14 @@ public class GlowEnderman extends GlowMonster implements Enderman {
     @Override
     public void setCarriedMaterial(MaterialData type) {
         this.carriedMaterial = type;
-        metadata.set(MetadataIndex.ENDERMAN_BLOCK, Integer.valueOf(type.getItemTypeId()).shortValue());
-        metadata.set(MetadataIndex.ENDERMAN_BLOCK_DATA, type.getData());
+        metadata.set(MetadataIndex.ENDERMAN_BLOCK, new Integer(type.getItemTypeId()).shortValue());
     }
 
     public boolean isScreaming() {
-        return metadata.getByte(MetadataIndex.ENDERMAN_ALERTED) == 1;
+        return metadata.getBoolean(MetadataIndex.ENDERMAN_SCREAMING);
     }
 
     public void setScreaming(boolean screaming) {
-        metadata.set(MetadataIndex.ENDERMAN_ALERTED, screaming ? (byte) 1 : (byte) 0);
+        metadata.set(MetadataIndex.ENDERMAN_SCREAMING, screaming);
     }
 }
